<resources>
    <string name="app_name">MDView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_upload_local">Выбрать локальный файл</string>
    <string name="button_upload_web">Получить по ссылке</string>
    <string name="address_hint">ссылка на файл</string>
    <string name="button_edit">Редактировать файл</string>
    <string name="button_view">Просмотр файла</string>
    <string name="button_save">Сохранить</string>
    <string name="markdown_here">Markdown здесь...</string>
    <string name="markdown_view_text">Загрузите или введите Markdown</string>
    <string name="status_description">status</string>
    <string name="default_markdown_filename">new_markdown.md</string>
    <string name="select_md_file_error">Выберите файл с расширением .md</string>
    <string name="enter_url_error">Введите URL</string>
    <string name="toolbar_bold">B</string>
    <string name="toolbar_italic">I</string>
    <string name="toolbar_strike">S</string>
    <string name="toolbar_header">#</string>
</resources>